# ComfyUI-MultiGPU

./: .clinerules  ARCHITECTURE_V2.0.0.md  CLAUDE.md  DOE_OPTIMIZATION.md  README.md  RELEASE_NOTES_v2.5.0.md  WANVIDEO_BLOCKSWAP_ANALYSIS.md  __init__.py  block_swap.py  checkpoint_multigpu.py  claude.md  claude_json.json  clip_dynamic_load_list_guard.py  converter_comfy_node.py  debug_utils.py  device_memory_audit.py  device_utils.py  distorch.py  distorch_2.py  distorch_2_hacked.py  distorch_2_lora.py  distorch_2_ratio_byte.py  distorch_safetensor.py  fftql.py  flux_merge_lora_sa.py  ggml_weight_utils.py  hardware_info.py  hvci_detector.py  model_management_mgpu.py  model_sig.py  nodes.py  nunchaku.py  p2p_registry.py  pr.html  pyproject.toml  wanvideo.py  wanvideo_deprecated.py  wrappers.py
.github/workflows/: publish_action.yml
assets/: allocate_vram_multi.py
ci/: extract_allocation.py  run_workflows.py  summarize_log.py
core/: blockswap.py
example_workflows/: ComfyUI-WanVideoWrapper wanvideo2_2 I2V A14B GGUF.json  ComfyUI-starter_multigpu.json  qwen_image_edit_2509 unet clip distorch2.json  wan2_2 t2i lightx2v lora distorch2.json  wan2_2 t2v lightx2v lora distorch2.json
examples/: wanvideo2_2_I2V_A14B_example_WIP_Multigpu.json  wanvideo_T2V_example_MultiGPU.json
memory-bank/: activeContext.md  code-references.md  comfy_core.py  comfyui-lineage.md  cpu_leak_fix_plan.md  distorch_selective_unload_solution.md  performance-benchmarks.md  phase3_bug_fix.md  phase4_proposal.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+27 files in other folders)
